==> china-djyos/djyos/bsp/cpudrv/Atmel/Sam4e/src/iic/cpu_peri_iic.c <==
#include "cpu_peri.h"
#include <string.h>
#include "endian.h"
#include "iicbus.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_IIC    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_IIC0_BUF_LEN        128                        //"IIC0缓冲区大小",
#define CFG_IIC0_DMA_BUF_LEN    64                         //"IIC0DMA缓冲区大小",
#define CFG_IIC1_BUF_LEN        128                        //"IIC1缓冲区大小",
#define CFG_IIC1_DMA_BUF_LEN    64                         //"IIC1DMA缓冲区大小",
#define CFG_IIC0_ENABLE         false                      //"是否配置IIC0",
#define CFG_IIC1_ENABLE         false                      //"是否配置IIC1",
#define CN_IIC_REGISTER_BADDR0        0x40018000
#define CN_IIC_REGISTER_BADDR1        0x4001C000

static void __IIC_IntDisable(volatile tagI2CReg *reg,u32 IntSrc)
{
    reg->TWI_IDR = IntSrc;
}

static void __IIC_IntEnable(volatile tagI2CReg *reg,u32 IntSrc)
{
    reg->TWI_IER = IntSrc;
}

static void __IIC_GenerateStop(volatile tagI2CReg *reg)
{
    reg->TWI_CR = TWI_CR_STOP;
}

static void __IIC_HardConfig(ptu32_t RegBaseAddr,u8 iicno)
{
    volatile tagI2CReg *reg;
    reg = (volatile tagI2CReg *)RegBaseAddr;

    __IIC_GpioInit(iicno);

    reg->TWI_CR = TWI_CR_SWRST;//reset the twi
    reg->TWI_RHR;        //clear the rhr
    //config master mode
    reg->TWI_CR = TWI_CR_MSDIS;
    reg->TWI_CR = TWI_CR_SVDIS;

    /* Set master mode */
    reg->TWI_CR = TWI_CR_MSEN;

    //config the SCK
    reg->TWI_CWGR = 0 ;
    reg->TWI_CWGR = (1 << 16) | (248 << 8) | 248 ;//100KHz
}

static bool_t __IIC_GenerateWriteStart(volatile tagI2CReg *Reg,
                                       u8 dev_addr,
                                       u32 mem_addr,
                                       u8 maddr_len,
                                       u32 length,
                                       struct SemaphoreLCB *iic_semp)
{
    struct IIC_CB *IIC;
    struct IIC_IntParamSet *IntParam;
    u8 ch,*pDmaBuf,Port,DmaBufLen;

    //通过specific_flag区分是哪条总线
    if((u32)Reg == CN_IIC_REGISTER_BADDR0)
    {
        IntParam = &IntParamset0;
        IIC = s_ptIIC0_CB;
        pDmaBuf = s_IIC0DmaBuf;
        Port = CN_IIC0;
        DmaBufLen = CFG_IIC0_DMA_BUF_LEN;
    }
    else if((u32)Reg == CN_IIC_REGISTER_BADDR1)
    {
        IntParam = &IntParamset1;
        IIC = s_ptIIC1_CB;
        pDmaBuf = s_IIC1DmaBuf;
        Port = CN_IIC1;
        DmaBufLen = CFG_IIC1_DMA_BUF_LEN;
    }
    else
    {
        return false;
    }
    IntParam->TransTotalLen = length;
    IntParam->TransCount = 0;
    IntParam->pDrvPostSemp = iic_semp;

    Reg->TWI_MMR = 0;
    Reg->TWI_MMR = (maddr_len<<8)|(dev_addr<<16);
    Reg->TWI_IADR = 0;
    Reg->TWI_IADR = TWI_IADR_IADR(mem_addr);
    Reg->TWI_CR = TWI_CR_START;

    if(s_IIC_DmaUsed[Port] == false)        //使用非DMA方式 发送
    {
        //发送一个字节的数据
        while(!(Reg->TWI_SR & TWI_SR_TXRDY));
        IIC_PortRead(IIC,&ch,1);

        Reg->TWI_THR = ch;
        IntParam->TransCount++;
        __IIC_IntEnable(Reg,TWI_IER_TXRDY);
    }
    else                                    //配置DMA发送时的参数
    {
        while(!(Reg->TWI_SR & TWI_SR_TXRDY));
        ch = IIC_PortRead(IIC,pDmaBuf,DmaBufLen);
        Reg->TWI_TPR  = (u32)pDmaBuf;
        Reg->TWI_TCR  = ch;
        Reg->TWI_PTCR = TWI_PTCR_TXTEN;
        __IIC_IntEnable(Reg,TWI_IER_ENDTX);
    }

    return true;
}

static bool_t __IIC_GenerateReadStart( volatile tagI2CReg *Reg,
                                       u8 dev_addr,
                                       u32 mem_addr,
                                       u8 maddr_len,
                                       u32 length,
                                       struct SemaphoreLCB *iic_semp)
{
    u8 DmaRcvLen,*pDmaBuf,Port,DmaBufLen;

    if((u32)Reg == CN_IIC_REGISTER_BADDR0)
    {
        IntParamset0.TransTotalLen = length;
        IntParamset0.TransCount = 0;
        IntParamset0.pDrvPostSemp = iic_semp;               //iic_buf_semp
        pDmaBuf = s_IIC0DmaBuf;
        Port = CN_IIC0;
        DmaBufLen = CFG_IIC0_DMA_BUF_LEN;
    }
    else if((u32)Reg == CN_IIC_REGISTER_BADDR1)
    {
        IntParamset1.TransTotalLen = length;
        IntParamset1.TransCount = 0;
        IntParamset1.pDrvPostSemp = iic_semp;
        pDmaBuf = s_IIC1DmaBuf;
        Port = CN_IIC1;
        DmaBufLen = CFG_IIC1_DMA_BUF_LEN;
    }
    else
    {
        return false;
    }
    Reg->TWI_RHR;

    //TWI_MMR_IADRSZ_2_BYTE; len ; device addr
    Reg->TWI_MMR = 0;
    Reg->TWI_MMR = (maddr_len<<8)|(TWI_MMR_MREAD)|(dev_addr<<16);
    Reg->TWI_IADR = 0;
    Reg->TWI_IADR = TWI_IADR_IADR(mem_addr);
    Reg->TWI_CR = TWI_CR_START;

    if(s_IIC_DmaUsed[Port] == false)
        __IIC_IntEnable(Reg,TWI_IER_RXRDY|TWI_IER_TXRDY);
    else
    {
        DmaRcvLen = length>DmaBufLen ? DmaBufLen:length;
        Reg->TWI_RPR  = (uint32_t)pDmaBuf;
        Reg->TWI_RCR  = DmaRcvLen;
        Reg->TWI_PTCR = TWI_PTCR_RXTEN;
        __IIC_IntEnable(Reg,TWI_IER_ENDRX);
    }

    return true;
}

static void __IIC_GenerateEnd(volatile tagI2CReg *Reg)
{
    if(((u32)Reg != CN_IIC_REGISTER_BADDR0) &&
            (u32)Reg == CN_IIC_REGISTER_BADDR1)
        return;

//    __IIC_IntDisable(Reg, TWI_IDR_TXRDY|TWI_IDR_RXRDY|TWI_IDR_TXCOMP);
    __IIC_IntDisable(Reg, TWI_IDR_TXRDY|TWI_IDR_RXRDY|
            TWI_IDR_ENDRX|TWI_IDR_ENDTX|TWI_IDR_TXCOMP);
    DJY_EventDelay(100);
    __IIC_GenerateStop(Reg);

    __IIC_Reset(Reg);
}

static s32 __IIC_BusCtrl(volatile tagI2CReg *Reg,u32 cmd,u32 data1,u32 data2)
{
    if(((u32)Reg != CN_IIC_REGISTER_BADDR0) &&
            (u32)Reg != CN_IIC_REGISTER_BADDR1)
        return 0;

    switch(cmd)
    {
    case CN_IIC_SET_CLK:
        __IIC_SetClk(Reg,data1);
        break;
    case CN_IIC_DMA_USED:
    case CN_IIC_DMA_UNUSED:
        __IIC_DMA_Config(Reg,cmd);
        break;
    default:
        break;
    }
    return 1;
}

static u32 __IIC_ISR(ufast_t IntLine)
{
    static struct IIC_CB *ICB;
    static struct IIC_IntParamSet *IntParam;
    tagI2CReg *reg;

    u8 ch,Port,*PDmaBuf;
    u32 twi_sr,twi_imr,DmaBufLen,temp;

    if(IntLine == CN_INT_LINE_TWI0)
    {
        ICB = s_ptIIC0_CB;
        IntParam = &IntParamset0;
        reg = (tagI2CReg *)CN_IIC_REGISTER_BADDR0;
        Port = CN_IIC0;
        PDmaBuf = s_IIC0DmaBuf;
        DmaBufLen = CFG_IIC0_DMA_BUF_LEN;
    }
    else if(IntLine == CN_INT_LINE_TWI1)
    {
        ICB = s_ptIIC1_CB;
        IntParam = &IntParamset1;
        reg = (tagI2CReg *)CN_IIC_REGISTER_BADDR1;
        Port = CN_IIC1;
        PDmaBuf = s_IIC1DmaBuf;
        DmaBufLen = CFG_IIC1_DMA_BUF_LEN;
    }
    else
    {
        return 0;
    }

    twi_sr = reg->TWI_SR;
    twi_imr = reg->TWI_IMR;

    if(s_IIC_DmaUsed[Port] == false)        //使用非DMA发送和接收
    {
        if((twi_sr & TWI_SR_RXRDY) && (twi_imr & TWI_IMR_RXRDY))//接收中断
        {
            ch = reg->TWI_RHR;
            if(IIC_PortWrite(ICB,&ch,1))
                IntParam->TransCount ++;
            if(IntParam->TransCount == IntParam->TransTotalLen - 1)
            {
                __IIC_GenerateStop(reg);   //倒数第一个时写stop
            }
            else if(IntParam->TransCount == IntParam->TransTotalLen)
            {
                __IIC_GenerateStop(reg);
                __IIC_IntDisable(reg,TWI_IDR_RXRDY);
                __IIC_IntEnable(reg,TWI_IER_TXCOMP);
            }
        }
        else if((twi_sr & TWI_SR_TXRDY) && (twi_imr & TWI_IMR_TXRDY))//发送
        {
            if(IIC_PortRead(ICB,&ch,1))
            {
                reg->TWI_THR = ch;
                IntParam->TransCount ++;
            }
            else if(IntParam->TransCount == IntParam->TransTotalLen)
            {
                __IIC_IntDisable(reg,TWI_IDR_TXRDY);
                __IIC_IntEnable(reg,TWI_IER_TXCOMP);
                __IIC_GenerateStop(reg);
            }
        }
        else if((twi_sr & TWI_SR_TXCOMP) && (twi_imr & TWI_IMR_TXCOMP))
        {
            __IIC_IntDisable(reg,TWI_IDR_TXCOMP);
            Lock_SempPost(IntParam->pDrvPostSemp);
        }
    }
    else            //使用DMA方式发送和接收数据
    {
        if((twi_sr & TWI_SR_ENDRX) && (twi_imr & TWI_IMR_ENDRX))//接收中断
        {
            reg->TWI_PTCR = TWI_PTCR_RXTDIS;
            //计算本次缓冲区中有多少数据
            if(IntParam->TransTotalLen - IntParam->TransCount > DmaBufLen)
            {
                temp = DmaBufLen;
                IIC_PortWrite(ICB,PDmaBuf,temp);
                IntParam->TransCount += temp;
                //计算下次DMA接收的数据大小
                if(IntParam->TransTotalLen - IntParam->TransCount > DmaBufLen)
                    temp = DmaBufLen;
                else
                    temp = IntParam->TransTotalLen - IntParam->TransCount;
                //配置下次DMA接收
                reg->TWI_RPR = (u32)PDmaBuf;
                reg->TWI_RCR = temp;
                reg->TWI_PTCR = TWI_PTCR_RXTEN;
            }
            else                    //表明接收到了全部的数据
            {
                temp = IntParam->TransTotalLen - IntParam->TransCount;
                IIC_PortWrite(ICB,PDmaBuf,temp);
                __IIC_GenerateStop(reg);

                __IIC_IntDisable(reg,TWI_IDR_ENDRX);
                __IIC_IntEnable(reg,TWI_IER_TXCOMP);
            }
        }
        else if((twi_sr & TWI_SR_ENDTX) && (twi_imr & TWI_IMR_ENDTX))//发送
        {
            reg->TWI_PTCR = TWI_PTCR_TXTDIS;
            //计算发生本次中断，DMA发送的字节数
            if(IntParam->TransTotalLen - IntParam->TransCount > DmaBufLen)
            {
                IntParam->TransCount += DmaBufLen;
                //计算本次需发送多少数据
                if(IntParam->TransTotalLen - IntParam->TransCount > DmaBufLen)
                    temp = DmaBufLen;
                else
                    temp = IntParam->TransTotalLen - IntParam->TransCount;
                IIC_PortRead(ICB,PDmaBuf,temp);
                //配置DMA发送
                reg->TWI_TPR = (u32)PDmaBuf;
                reg->TWI_TCR = temp;
                reg->TWI_PTCR = TWI_PTCR_TXTEN;
            }
            else                    //表明DMA已经传输结束
            {
                IntParam->TransCount = IntParam->TransTotalLen;
                __IIC_IntDisable(reg,TWI_IDR_ENDTX);
                __IIC_IntEnable(reg,TWI_IER_TXCOMP);
                __IIC_GenerateStop(reg);
            }

        }
        else if((twi_sr & TWI_SR_TXCOMP) && (twi_imr & TWI_SR_TXCOMP))
        {
            __IIC_IntDisable(reg,TWI_IDR_TXCOMP);
            Lock_SempPost(IntParam->pDrvPostSemp);
        }
    }

    return 0;
}
