==> china-djyos/djyos/bsp/cpudrv/stm32/L4/src/iic/cpu_peri_iic.c <==
#include "cpu_peri.h"
#include "djyos.h"
#include "stdint.h"
#include "stdio.h"
#include "iicbus.h"
#include "endian.h"
#include "lock.h"
#include "int.h"
#include "stm32l4xx_hal_conf.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_IIC    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_I2C_BUF_LEN         128      //"配置IIC缓冲区大小",
#define CFG_I2C1_ENABLE         false    //"配置是否使用IIC1",
#define CFG_I2C2_ENABLE         false    //"配置是否使用IIC2",
#define CFG_I2C3_ENABLE         false    //"配置是否使用IIC3",
#define tagI2CReg  I2C_TypeDef

static void __IIC_IntEnable(tagI2CReg *reg)
{
    reg->CR1 |= (I2C_CR1_TXIE|I2C_CR1_RXIE);//发送和接收中断同时使能

}

static void __IIC_IntDisable(tagI2CReg *reg)
{
    reg->CR1 &= ~(I2C_CR1_RXIE| I2C_CR1_TXIE);
}

static bool_t __IIC_HardConfig(u8 iic_port)
{
    RCC->APB1ENR1 |=(1<<(21+iic_port));//外设时钟使能
    //0- APB1-54    1-sysclk-216     2- HSI-108
    if(__IIC_ClkSet(iic_port,0,0x10E0A1E1)==false)//默认时钟源为APB1时钟
        return false;

    tg_I2c_Reg[iic_port]->CR1 &=~I2C_CR1_PE;//PE使能
    tg_I2c_Reg[iic_port]->CR1 &=~I2C_CR1_ANFOFF;//时钟50ns以下时需要写1禁止模拟滤波器减小抑制
    tg_I2c_Reg[iic_port]->CR1 |=I2C_CR1_DNF_4BIT(0);//可滤除的噪声尖峰脉宽 0~15 tI2CCLK
    tg_I2c_Reg[iic_port]->CR1 &=~I2C_CR1_NOSTRETCH;//
    tg_I2c_Reg[iic_port]->CR2 |=I2C_CR2_AUTOEND;//自动结束模式
    tg_I2c_Reg[iic_port]->CR2 &=~I2C_CR2_ADD10;//7位寻址模式
    tg_I2c_Reg[iic_port]->OAR1=0x8000;//自身地址
    tg_I2c_Reg[iic_port]->CR1  = I2C_CR1_PE;//PE使能

    return true;

}

static void __IIC_GenerateStop(tagI2CReg *reg)
{
    reg->CR2 |=I2C_CR2_STOP;//产生停止位

}

static bool_t __IIC_GenerateWriteStart(tagI2CReg *reg,
                                       u8 dev_addr,
                                       u32 mem_addr,
                                       u8 maddr_len,
                                       u32 length,
                                       struct SemaphoreLCB *iic_semp)
{
    u8 mem_addr_buf[4];
    u8 iic_port;
    //通过specific_flag区分是哪条总线
    if(reg==tg_I2c_Reg[CN_IIC1])
        iic_port=CN_IIC1;
    else if (reg==tg_I2c_Reg[CN_IIC2])
        iic_port=CN_IIC2;
    else if (reg==tg_I2c_Reg[CN_IIC3])
        iic_port=CN_IIC3;
    else
        return false;

    IntParamset[iic_port].TransTotalLen = length;
    IntParamset[iic_port].TransCount = 0;
    IntParamset[iic_port].pDrvPostSemp = iic_semp;           //iic_bus_semp

    //将地址作大小端变换

    u8 i;
    for(i=0;i<maddr_len;i++)
    {
        mem_addr_buf[(maddr_len-1)-i]=((mem_addr>>(8*i))&0xff);
    }
    __IIC_IntDisable(reg);                 //关中断
    //先发送器件地址，内部地址，然后发送第一个数据
    if(__IIC_WriteAddr(reg, dev_addr, mem_addr_buf,maddr_len) )
    {
        reg->CR2 &=~I2C_CR2_RD_WRN;//写标志
        reg->CR2 |=I2C_CR2_RELOAD;//传输字节大于255
        reg->CR2 |=I2C_CR2_NBYTES_8BIT(0xFF);
        reg->CR2 |=I2C_CR2_AUTOEND;//自动结束方式
        __IIC_IntEnable(reg);//使能中断
        reg->CR2 |=I2C_CR2_START;//start
        return true;
    }

    return false;
}

static bool_t __IIC_GenerateReadStart( tagI2CReg *reg,
                                       u8 dev_addr,
                                       u32 mem_addr,
                                       u8 maddr_len,
                                       u32 length,
                                       struct SemaphoreLCB *iic_semp)
{
    u8 mem_addr_buf[4];
    u8 iic_port;
    if(reg==tg_I2c_Reg[CN_IIC1])
        iic_port=CN_IIC1;
    else if(reg==tg_I2c_Reg[CN_IIC2])
        iic_port=CN_IIC2;
    else if(reg==tg_I2c_Reg[CN_IIC3])
        iic_port=CN_IIC3;
    else
        return false;

    IntParamset[iic_port].TransTotalLen = length;
    IntParamset[iic_port].TransCount = 0;
    IntParamset[iic_port].pDrvPostSemp = iic_semp;               //iic_buf_semp

    u8 i;
    for(i=0;i<maddr_len;i++)
    {
        mem_addr_buf[(maddr_len-1)-i]=((mem_addr>>(8*i))&0xff);
    }
    __IIC_IntDisable(reg);//关中断

    //写器件地址和寻址地址
    //写器件地址和寻址地址
    if(__IIC_WriteAddr(reg, dev_addr, mem_addr_buf,maddr_len) )
    {
        reg->CR2 |=I2C_CR2_AUTOEND;//自动结束方式
        reg->CR2 |=I2C_CR2_RD_WRN;//读标志
        __IIC_IntEnable(reg);//使能中断
        reg->CR2 |=I2C_CR2_START;//start
        return true;
    }
    return false;
}

static void __IIC_GenerateEnd(tagI2CReg *reg)
{
    if(reg == NULL)
        return;
    if(reg->CR2 & I2C_CR2_RD_WRN )//发送
    {
        reg->CR1 |= I2C_CR2_NACK;//停止回复ACK
        __IIC_GenerateStop(reg);
    }
    else //接收
    {
        __IIC_GenerateStop(reg);
    }
}

static s32 __IIC_BusCtrl(tagI2CReg *reg,u32 cmd,u32 data1,u32 data2)
{
    if( reg == NULL )
        return 0;
    switch(cmd)
    {
        case CN_IIC_SET_CLK: //设置时钟频率
                _IIC_ClkSet(reg,data1);
              break;
        case CN_IIC_DMA_USED://使用dma传输

            break;
        case CN_IIC_DMA_UNUSED://禁止dma传输

            break;
        case CN_IIC_SET_POLL:           //使用轮询方式发送接收
            __IIC_IntDisable(reg);
            break;
        default:
            return 0;
    }
    return 1;
}

static u32 __IIC_ISR(ufast_t i2c_int_line)
{
    static struct IIC_CB *ICB;
    static struct IIC_IntParamSet *IntParam;
    tagI2CReg *reg;
    u8 iic_port;
    u8 ch;
    u32 IicErrorNo;
    switch (i2c_int_line)
    {
        case CN_INT_LINE_I2C1_EV:
            iic_port=CN_IIC1;
            break;
        case CN_INT_LINE_I2C2_EV:
            iic_port=CN_IIC2;
            break;
        case CN_INT_LINE_I2C3_EV:
            iic_port=CN_IIC3;
            break;
        default:    return false;
    }
    reg = (tagI2CReg*)tg_I2c_Reg[iic_port];
    ICB = s_ptIIC_CB[iic_port];
    IntParam = &IntParamset[iic_port];

    //判断中断方式
    //清除中断
    //发送或者接受数据
    //出错检查
    if(reg->ISR & I2C_ISR_TXIS) //发送中断
    {
        if(IIC_PortRead(ICB,&ch,1) > 0)
        {
            *((volatile u8 *)&reg->TXDR) = ch;
            IntParam->TransCount ++;;
        }
        else if(IntParam->TransCount == IntParam->TransTotalLen)
        {
          Lock_SempPost(IntParam->pDrvPostSemp);
          __IIC_IntDisable(reg);//关中断
          __IIC_GenerateStop(reg);
        }
    }
    else if(reg->ISR & I2C_ISR_RXNE)//接收中断
    {
        while((IntParam->TransCount < IntParam->TransTotalLen))
        {
            // 最后一个字节master不发ACK，表示读操作终止
            if(IntParam->TransCount == IntParam->TransTotalLen - 1)
            {
                reg->CR2 |= I2C_CR2_NACK;
            }

            while (reg->ISR&I2C_ISR_RXNE)//传输字节
                ch = reg->RXDR;
            //写数据
            IIC_PortWrite(ICB,&ch,1);
            IntParam->TransCount ++;
        }
        if((IntParam->TransCount == IntParam->TransTotalLen)  &&
                                    (!(reg->ISR&I2C_ISR_RXNE)))//最后一位读取完成
        {
            __IIC_GenerateStop(reg);
            __IIC_IntDisable(reg);//关中断
            Lock_SempPost(IntParam->pDrvPostSemp);//释放总线信号量
        }

    }

    else//未启动通信
    {
        if(reg->ISR & (I2C_ISR_ARLO))//仲裁丢失中断
        {
            reg->ICR = I2C_ICR_ARLOCF;//清除仲裁丢失中断标志位
            IicErrorNo = CN_IIC_POP_MAL_LOST_ERR;
            IIC_ErrPop(ICB,IicErrorNo);
        }
        if(reg->ISR & (I2C_ISR_NACKF))
        {
            reg->ICR = I2C_ICR_ARLOCF;//清除仲裁丢失中断标志位
            IicErrorNo = CN_IIC_POP_NO_ACK_ERR;
            IIC_ErrPop(ICB,IicErrorNo);
        }
    }

    return true;
}
